Fix JWT role-based authorization: include roles in JWT claims and parse correctly
The @PreAuthorize annotations were returning 403 because:
1. AuthService.login() passed null for roles when generating the JWT
2. JwtAuthFilter had broken role parsing (treated string as individual chars)

Fix:
- AuthService: fetch user roles from DB via user_roles+roles join, pass as
  comma-separated string to generateAccessToken()
- AuthService.refresh(): same fix for token refresh flow
- JwtAuthFilter: properly split comma-separated roles and create
  ROLE_<NAME> SimpleGrantedAuthority for each (uppercased)

Generated with [Devin](https://devin.ai)

Co-Authored-By: Devin <158243242+devin-ai-integration[bot]@users.noreply.github.com>